tests/fail/IOr.java
package fail;

import java.lang.System;

public class IOr {
	public static void main(String[] args) {
		System.out.println(true | 42);
	}
}
